--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -6,8 +6,14 @@
 <head runat="server">
     <title>SPW Management System</title>
 
+    <link rel="stylesheet" href='http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap.min.css' media="screen" />
+    <script type="text/javascript" src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.3.min.js'></script>
+    <script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js'></script>
+    <script type="text/javascript" src="http://cdn.rawgit.com/bassjobsen/Bootstrap-3-Typeahead/master/bootstrap3-typeahead.min.js"></script>
+    <link rel="Stylesheet" href="https://twitter.github.io/typeahead.js/css/examples.css" />
+
     <!-- Bootstrap Core CSS -->
-    <link href="../CSS/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <%--<link href="../CSS/bootstrap.min.css" rel="stylesheet" type="text/css" />--%>
 
     <!-- MetisMenu CSS -->
     <link href="../CSS/metisMenu.min.css" rel="stylesheet" type="text/css" />
@@ -21,10 +27,10 @@
     <link href="../CSS/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
     <!-- jQuery -->
-    <script type="text/javascript" src="../JQuery/jquery.min.js"></script>
+    <%--<script type="text/javascript" src="../JQuery/jquery.min.js"></script>--%>
 
     <!-- Bootstrap Core JavaScript -->
-    <script type="text/javascript" src="../JQuery/bootstrap.min.js"></script>
+    <%--<script type="text/javascript" src="../JQuery/bootstrap.min.js"></script>--%>
 
     <!-- Metis Menu Plugin JavaScript -->
     <script type="text/javascript" src="../JQuery/metisMenu.min.js"></script>
