--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -143,6 +143,9 @@
                                     <li>
                                         <a href="../Page/SearchSupplier.aspx">ข้อมูลซัพพลายเออร์</a>
                                     </li>
+                                    <li>
+                                        <a href="../Page/SearchTranspotLine.aspx">ข้อมูลสายจัดรถ</a>
+                                    </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
@@ -176,13 +179,13 @@
                                     <li>
                                         <a href="../Page/ReportMonthlySale.aspx">รายงานสรุปยอดขายแต่ละเดือน</a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a href="../Page/PayInSlip.aspx">PayInSlip</a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a href="../Page/ReportPayInSummary.aspx">รายงานสรุปการนำเข้าเช็ค</a>
                                     </li>
-                                    
+
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
