--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -77,11 +77,8 @@
                             <i class="fa fa-user fa-fw"></i><i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <%--<li><a href="#"><i class="fa fa-user fa-fw"></i>User Profile</a>
+                            <li><a href="../Page/ManageUser.aspx"><i class="fa fa-sign-out fa-fw"></i>Change Password</a>
                             </li>
-                            <li><a href="#"><i class="fa fa-gear fa-fw"></i>Settings</a>
-                            </li>
-                            <li class="divider"></li>--%>
                             <li><a href="../PageLogin/Login.aspx"><i class="fa fa-sign-out fa-fw"></i>Logout</a>
                             </li>
                         </ul>
@@ -266,7 +263,7 @@
                             <li runat="server" id="PO" visible="true">
                                 <a href="#"><i class="fa fa-car fa-fw"></i>&nbsp;Purchase Order<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
-                                  <%--<li>
+                                    <%--<li>
                                         <a href="../Page/SearchPurchaseRequisitionOrder.aspx">Purchase Requisition Order</a>
                                     </li>
                                     <li>
