20160714 - Receive PO(print)

--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -279,6 +279,9 @@
                                     <li>
                                         <a href="../Page/SearchPurchaseOrderReceipts.aspx">Purchase Order Receipts</a>
                                     </li>
+                                    <li>
+                                        <a href="../Page/PurchaseOrderRpt.aspx">Purchase Order Report</a>
+                                    </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
