--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -119,6 +119,29 @@
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
+                            <li runat="server" id="KPI" visible="true">
+                                <a href="#"><i class="fa fa-renren fa-fw"></i>&nbsp;KPI<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                <%--    <li>
+                                        <a href="../Page/SearchEmpSkill.aspx">ข้อมูลทักษะพนักงาน</a>
+                                    </li>
+                                    <li>
+                                        <a href="../Page/SearchEmpSkillType.aspx">ข้อมูลประเภททักษะพนักงาน</a>
+                                    </li>
+                                    <li>
+                                        <a href="../Page/ManageGrade.aspx">ข้อมูลเกรด</a>
+                                    </li>--%>
+                                  
+                                     <asp:ListView ID="listKPI" runat="server">
+                                        <ItemTemplate>
+                                            <li>
+                                                <a href='<%#Eval("SUB_FUNCTION_PATH")%>'><%#Eval("SUB_FUNCTION_NAME")%></a>
+                                            </li>
+                                        </ItemTemplate>
+                                    </asp:ListView>
+                                </ul>
+                                <!-- /.nav-second-level -->
+                            </li>
                             <li runat="server" id="StandardData" visible="true">
                                 <a href="#"><i class="fa fa-cubes fa-fw"></i>&nbsp;ข้อมูลพื้นฐาน<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
