--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -308,6 +308,9 @@
                                         <a href="../Page/SearchStockWithdraw.aspx">Stock Withdraw</a>
                                     </li>
                                     <li>
+                                        <a href="../Page/SearchStockWithdrawExpose.aspx">Stock Withdraw Expose</a>
+                                    </li>
+                                    <li>
                                         <a href="../Page/StockWithdrawIssue.aspx">Issue Stock Withdraw</a>
                                     </li>
                                 </ul>
