--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -305,13 +305,13 @@
                                         <a href="../Page/PurchaseOrderRpt.aspx">Purchase Order Report</a>
                                     </li>
                                     <li>
-                                        <a href="../Page/SearchStockWithdraw.aspx">Stock Withdraw</a>
+                                        <a href="../Page/StockWithdrawIssue.aspx">Issue Stock Withdraw</a>
+                                    </li>
+                                    <li>
+                                        <a href="../Page/SearchStockWithdraw.aspx">Stock Withdraw Approve</a>
                                     </li>
                                     <li>
                                         <a href="../Page/SearchStockWithdrawExpose.aspx">Stock Withdraw Expose</a>
-                                    </li>
-                                    <li>
-                                        <a href="../Page/StockWithdrawIssue.aspx">Issue Stock Withdraw</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
