--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -283,7 +283,7 @@
                                 <!-- /.nav-second-level -->
                             </li>
                             <li runat="server" id="PO" visible="true">
-                                <a href="#"><i class="fa fa-car fa-fw"></i>&nbsp;Purchase Order<span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa fa-car fa-fw"></i>&nbsp;ฝ่ายจัดซื้อ<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <%--<li>
                                         <a href="../Page/SearchPurchaseRequisitionOrder.aspx">Purchase Requisition Order</a>
@@ -299,19 +299,19 @@
                                         </ItemTemplate>
                                     </asp:ListView>
                                     <li>
-                                        <a href="../Page/SearchPurchaseOrderReceipts.aspx">Purchase Order Receipts</a>
+                                        <a href="../Page/SearchPurchaseOrderReceipts.aspx">เลขที่บิลรับสินค้า</a>
                                     </li>
                                     <%--<li>
                                         <a href="../Page/PurchaseOrderRpt.aspx">Purchase Order Report</a>
                                     </li>--%>
                                     <li>
-                                        <a href="../Page/StockWithdrawIssue.aspx">Issue Stock Withdraw</a>
+                                        <a href="../Page/StockWithdrawIssue.aspx">ใบเบิกสินค้า</a>
                                     </li>
                                     <li>
-                                        <a href="../Page/SearchStockWithdraw.aspx">Stock Withdraw Approve</a>
+                                        <a href="../Page/SearchStockWithdraw.aspx">ผู้อนุมัติ</a>
                                     </li>
                                     <li>
-                                        <a href="../Page/SearchStockWithdrawExpose.aspx">Stock Withdraw Expose</a>
+                                        <a href="../Page/SearchStockWithdrawExpose.aspx">ผู้จ่ายสินค้า</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
