--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -283,7 +283,7 @@
                                 <!-- /.nav-second-level -->
                             </li>
                             <li runat="server" id="PO" visible="true">
-                                <a href="#"><i class="fa fa-car fa-fw"></i>&nbsp;ฝ่ายจัดซื้อ<span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa fa-shopping-cart fa-fw"></i>&nbsp;ฝ่ายจัดซื้อ<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <%--<li>
                                         <a href="../Page/SearchPurchaseRequisitionOrder.aspx">Purchase Requisition Order</a>
@@ -309,10 +309,10 @@
                                     </li>
                                     <li>
                                         <a href="../Page/SearchStockWithdraw.aspx">ผู้อนุมัติ</a>
-                                    </li>
+                                    </li>--%>
                                     <li>
                                         <a href="../Page/SearchStockWithdrawExpose.aspx">ผู้จ่ายสินค้า</a>
-                                    </li>--%>
+                                    </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
