20161014 - แจ้งซ่อมรถ

--- a/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
+++ b/SPW.UI.Web/MasterPage/MasterPageMainAdmin.Master
@@ -270,8 +270,8 @@
                                 <a href="#"><i class="fa fa-car fa-fw"></i>&nbsp;ทรัพย์สิน<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="../Page/SearchInvoice.aspx">รายการส่งซ่อม</a>
-                                        <a href="../Page/ReportInvoice.aspx">พิมพ์รายการส่งซ่อม</a>
+                                        <%--<a href="../Page/SearchInvoice.aspx">รายการส่งซ่อม</a>
+                                        <a href="../Page/ReportInvoice.aspx">พิมพ์รายการส่งซ่อม</a>--%>
                                     </li>
                                     <asp:ListView ID="listInvoice" runat="server">
                                         <ItemTemplate>
